# fomss2024aud

./: .gitignore  CMake-Toolchain-linux-arm.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
src/: CMakeLists.txt  run.sh
src/00_grundlagen_c/: CMakeLists.txt  fahrenheit.c  input.c  pointer.c  simplefunctions.c  structs.c
src/00_grundlagen_c/calculator/: CMakeLists.txt  allinone.c  calc.h  getch.c  getop.c  main.c
src/00_grundlagen_cpp/: CMakeLists.txt  namespaces.cpp  simplefunctions.cpp
src/chapter/: declarations.hpp
src/chapter/00_grundlagen/: CMakeLists.txt
src/chapter/00_grundlagen/00_grundlagen_c/: CMakeLists.txt  arrays.c  fahrenheit.c  input.c  pointer.c  simplefunctions.c  structs.c
src/chapter/00_grundlagen/00_grundlagen_cpp/: CMakeLists.txt  classes.cpp  simplefunctions.cpp
src/chapter/01_einfuehrung/: CMakeLists.txt
src/chapter/01_einfuehrung/factorial/: CMakeLists.txt  factorial.c
src/chapter/01_einfuehrung/gcd/: CMakeLists.txt  gcd.c  gcd.h  gcd_main.c
src/chapter/01_einfuehrung/hanoi/: CMakeLists.txt  hanoi.c
src/chapter/01_einfuehrung/invsqrt/: CMakeLists.txt  invsqrt.c
src/chapter/02_datastructures/: CMakeLists.txt  README.md  stackdemo.c
src/chapter/02_datastructures/array/: CMakeLists.txt  array.c  array.h
src/chapter/02_datastructures/avltree/: CMakeLists.txt  avltree.cpp  avltree.h  avltree_insert.cpp  avltree_rotation.cpp  avltree_test.cpp
src/chapter/02_datastructures/binsearchtree/: CMakeLists.txt  binsearchtree.cpp  binsearchtree.h  binsearchtree_insert.cpp  binsearchtree_test.cpp
src/chapter/02_datastructures/bintree/: CMakeLists.txt  bintree.cpp  bintree.h  bintree_test.cpp
src/chapter/02_datastructures/dynarray/: CMakeLists.txt  dynarray.cpp  dynarray.h  dynarray_test.cpp
src/chapter/02_datastructures/heap/: CMakeLists.txt  heap.cpp  heap.h  heap_test.cpp
src/chapter/02_datastructures/intarray/: CMakeLists.txt  intarray.c  intarray.h  intarray_test.c
src/chapter/02_datastructures/linkedlist/: CMakeLists.txt  linkedlist.c  linkedlist.h  linkedlist_test.c
src/chapter/02_datastructures/queue/: CMakeLists.txt  queue.cpp  queue.h
src/chapter/02_datastructures/stack/: CMakeLists.txt  stack.cpp  stack.h  stack_test.cpp
src/chapter/02_datastructures/tests/: CMakeLists.txt  test_dynarray.cpp
src/chapter/02_datastructures/treearray/: CMakeLists.txt  treearray.c  treearray.h
src/chapter/03_sort/: CMakeLists.txt  README.md
src/chapter/03_sort/array/: CMakeLists.txt  array_sort_exercise_elem.c  array_sort_test.c  array_sort_test_heapsort.c  array_sort_test_mergesort.c  array_sort_test_quicksort.c  bubblesort.c  bubblesort.h  heapsort.c  heapsort.h  insertionsort.c  insertionsort.h  insertionsortinplace.c  insertionsortinplace.h  mergesort.c  mergesort.h  quicksort.c  quicksort.h  selectionsort.c  selectionsort.h  swap.c  swap.h  unsort.c  unsort.h
src/chapter/03_sort/bucketsortarray/: CMakeLists.txt  bucketsortarray.cpp  bucketsortarray.h  bucketsortarray_test.cpp
src/chapter/03_sort/countingsortarray/: CMakeLists.txt  countingsortarray.cpp  countingsortarray.h  countingsortarray_test.cpp
src/chapter/03_sort/radixsortarray/: CMakeLists.txt  radixsortarray.cpp  radixsortarray.h  radixsortarray_test.cpp
src/chapter/03_sort/radixsortstringarray/: CMakeLists.txt  radixsortstringarray.cpp  radixsortstringarray.h  radixsortstringarray_test.cpp
src/chapter/04_search/: CMakeLists.txt  README.md
src/chapter/04_search/searcharray/: CMakeLists.txt  searcharray.cpp  searcharray.h  searcharray_test.cpp
src/chapter/04_search/stringsearch/: CMakeLists.txt  fomstring.cpp  fomstring.h  stringsearch_test.cpp
src/chapter/05_graph/graph/: directedgraph.py
src/chapter/06_compression/huffman/: huffman.py
src/chapter/06_compression/rle/: rle.py
src/helloasm/: CMakeLists.txt
src/helloasm/arm/: CMakeLists.txt  helloworld.s
src/helloasm/x86_64/: CMakeLists.txt  helloworld_intel.s
src/helloboost/: CMakeLists.txt
src/hellopython/: helloworld.py
src/hellorust/hellolib/src/: lib.rs
src/hellorust/helloworld/: Cargo.toml
src/hellorust/helloworld/src/: random.rs
src/hellotest/: CMakeLists.txt  somefunctions.h  test_somefunctions.cpp
src/helloworld/: CMakeLists.txt  helloworld.cpp
src/helloworlds/: CMakeLists.txt
src/helloworlds/helloasm/arm/: CMakeLists.txt
src/helloworlds/helloasm/x86_64/: CMakeLists.txt  helloworld_atat.s
src/helloworlds/helloboost/: CMakeLists.txt  helloboost.cpp
src/helloworlds/hellopython/: helloworld.py
src/helloworlds/hellorust/: Cargo.toml
src/helloworlds/hellorust/hellolib/: Cargo.toml
src/helloworlds/hellotest/: somefunctions.c  test_helloworld.cpp
src/helloworlds/helloworld/: CMakeLists.txt  helloworld.c  helloworld.cpp
src/snippets/: CMakeLists.txt
src/snippets/00_grundlagen/strang/: CMakeLists.txt  strang.cpp  strang.h  strang_test.cpp
src/snippets/01_einfuehrung/: CMakeLists.txt
src/snippets/01_einfuehrung/factorial/: factorial.c
src/snippets/01_einfuehrung/gcd/: CMakeLists.txt  gcd.c  gcd.h  gcd_main.c
src/snippets/01_einfuehrung/invsqrt/: CMakeLists.txt  invsqrt.c
src/snippets/02_datastructures/: CMakeLists.txt  array_test.c
src/snippets/02_datastructures/array/: CMakeLists.txt  array.c  array.h
src/snippets/02_datastructures/circularbuffer/: CMakeLists.txt  circularbuffer.c  (+1 more)
src/uebungen/uebung01/: CMakeLists.txt  algorithmen.c  datum.c  eingabe.c  rechteck.c
src/uebungen/uebung02/: CMakeLists.txt
src/uebungen/uebung03/: CMakeLists.txt  gcd_benchmark.c  guessinggame.c
src/uebungen/uebung04/: CMakeLists.txt
src/uebungen/uebung05/: CMakeLists.txt
src/uebungen/uebung06/: CMakeLists.txt
src/uebungen/uebung07/: CMakeLists.txt
src/user/: CMakeLists.txt  README.md
src/user/factorial/: CMakeLists.txt  factorial  factorial.c
src/user/fom/: CMakeLists.txt  hellofom.c
src/user/uebungsblatt_1/: CMakeLists.txt  aufgabe2.c  aufgabe3.c  aufgabe4.c
src/user/vorlesung_2/: CMakeLists.txt  fahrenheit_umrechnen.c  helloworld.cpp  speicherverwaltung_gefaerliches_programm.c
src/user/vorlesung_3/: CMakeLists.txt  uebung_1.cpp
(+86 files in other folders)
