
add_executable(00_cpp_simplefunctions simplefunctions.cpp)
install(TARGETS 00_cpp_simplefunctions DESTINATION bin)

add_executable(00_cpp_classes classes.cpp)
install(TARGETS 00_cpp_classes DESTINATION bin)

add_executable(00_cpp_namespaces namespaces.cpp)
install(TARGETS 00_cpp_namespaces DESTINATION bin)
