
add_executable(cpp_simplefunctions simplefunctions.cpp)
install(TARGETS cpp_simplefunctions DESTINATION bin/c00)

add_executable(cpp_classes classes.cpp)
install(TARGETS cpp_classes DESTINATION bin/c00)

add_executable(cpp_namespaces namespaces.cpp)
install(TARGETS cpp_namespaces DESTINATION bin/c00)
